--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,12 @@
 watchdog
+Pillow
+#autocrop
 #python-opencv
 # pdf2image
+
+# python-magic
+python-magic
+###python-magic-bin
+#必須: brew install libmagic
+# for win::: python-magic-bin
+# -------- https://github.com/julian-r/python-magic
