Supports MacOS NDF processing

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 ## Added by me
 #.idea/*
 **/fig_gen/*
-**/fig_src/*
+sample/fig_srcぽぺび/*
 **/.history
 
 # Created by .ignore support plugin (hsz.mobi)
