Arrangement test files to conversion.

--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,8 @@ Pillow
 # pdf2image
 
 # python-magic
-python-magic
+# python-magic
+pdf2image
 ###python-magic-bin
 #必須: brew install libmagic
 # for win::: python-magic-bin
