UPDATE: (1)Changed my_logger to loguru, (2)Complete a test code to conv. to .eps img. (3) Various fixed.

--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ Pillow
 # python-magic
 # python-magic
 pdf2image
+loguru
 ###python-magic-bin
 #必須: brew install libmagic
 # for win::: python-magic-bin
