--- a/obsolute/pyproject.toml
+++ b/obsolute/pyproject.toml
@@ -1,4 +1,5 @@
-[tool.poetry]
+[project]
+#[tool.poetry]
 name = "ml_writing_helper"
 version = "0.1.0"
 description = ""
@@ -20,9 +21,9 @@ flake8 = ">=5.0.0"
 pylint = ">=2.17.0"
 
 [build-system]
-requires = ["poetry-core>=1.0.0"]
-build-backend = "poetry.core.masonry.api"
-
+#requires = ["setuptools","wheel","pip","cython"]
+requires = ["setuptools", "setuptools_scm"]
+build-backend = "setuptools.build_meta"
 
 #[tool.poetry.scripts]
 # 特定のコマンドを実行出来るようにする
