--- a/.gitignore
+++ b/.gitignore
@@ -1650,7 +1650,7 @@ pip-selfcheck.json
 .vscode/*
 !.vscode/settings.json
 !.vscode/tasks.json
-# !.vscode/launch.json
+!.vscode/launch.json
 !.vscode/extensions.json
 *.code-workspace
 
