Added JOSS journal manuscript

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -44,5 +44,15 @@
                 "eps"
             ]
         },
+        {
+            "name": "build JOSS paper",
+            "type": "f5anything",
+            "request": "launch",
+            "command": "docker run --rm -it -v $PWD:/data -u $(id -u):$(id -g) openjournals/inara -o pdf,crossref milestone/J2_JOSS/paper.md",
+            "terminalName": "Build JOSS paper",
+            "terminalIndex": -1,
+            "showTerminal": true,
+            "vscCommand": ""
+        },
     ]
 }
