--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -48,7 +48,7 @@
             "name": "build JOSS paper",
             "type": "f5anything",
             "request": "launch",
-            "command": "docker run --rm -it -v $PWD:/data -u $(id -u):$(id -g) openjournals/inara -o pdf,crossref milestone/J2_JOSS/paper.md",
+            "command": "docker run --rm -it -v $PWD:/data -u $(id -u):$(id -g) openjournals/inara -o pdf,crossref JOSS/paper.md",
             "terminalName": "Build JOSS paper",
             "terminalIndex": -1,
             "showTerminal": true,
